tests/errors/redefine-external.futil
import "primitives/core.futil";

extern "../../primitives/core.sv" { // This extern is not defined that in that file.
  primitive exp() -> ();
}

component exp() -> () {
  cells {}
  wires {}
  control {}
}

component main() -> () {
  cells {}
  wires {}
  control {}
}
