tests/errors/redefine-external.expect
---CODE---
1
---STDERR---
Error: tests/errors/redefine-external.futil
7 |component exp() -> () {
  |          ^^^ Name already bound by component or primitive
